Tuning Resize dialog: fix margins on small phone screens

--- a/src/app/features/editor/scale-editor/scale-root/scale-root.component.scss
+++ b/src/app/features/editor/scale-editor/scale-root/scale-root.component.scss
@@ -17,17 +17,14 @@ mat-form-field {
   margin-left: $field-gap;
 }
 
-.global-tune {
-  margin-bottom: $field-gap;
-  width: 7em;
-}
-
 .root-spec {
+  margin-bottom: $field-gap;
   width: 10em;
 }
 
 .cents-offset,
 .exact-freq,
+.global-tune,
 .nearest-midi-pitch {
   margin-bottom: $field-gap;
   width: 7em;
